--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -19,7 +19,9 @@ cache = false
 prompt_playground = true
 
 # Authorize users to upload files with messages
-multi_modal = true
+[features.multi_modal]
+enabled = true
+
 
 # Allows user to use speech to text
 [features.speech_to_text]
