--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,13 @@
 services:
   - type: web
-    name: chainlit-zomato
-    env: python
+    name: generative-ai-project
+    runtime: python3
+    region: oregon
     plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "chainlit run app.py --host 0.0.0.0 --port 10000"
+    buildCommand: pip install -r requirements.txt
+    startCommand: chainlit run main.py --host 0.0.0.0 --port $PORT
     envVars:
+      - key: OPENAI_API_KEY
+        sync: false
       - key: GROQ_API_KEY
         sync: false
